--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="DE">
+<html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schiffe versenken</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Schiffe Versenken</title>
+
+  <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
-    
+  <div class="container">
+    <header>
+      <h1>Schiffe Versenken</h1>
+    </header>
+
+    <div id="boards">
+      <div id="playerBoard" class="board">
+        <h2>Dein Feld</h2>
+      </div>
+      <div id="computerBoard" class="board">
+        <h2>Gegnerfeld</h2>
+      </div>
+    </div>
+
+    <div id="status">
+      Klicke auf das Gegnerfeld!
+    </div>
+
+    <footer>
+      <a href="#">Impressum</a> |
+      <a href="https://youtu.be/dQw4w9WgXcQ">Secret</a>
+    </footer>
+  </div>
+
 </body>
 </html>
