--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </div>
 
     <footer>
-      <a href="#">Impressum</a> |
+      <a href="https://dyhnunity.network/legal-notice/">Impressum</a>
+      <a href="https://dyhnunity.network/privacy-policy/">Datenschutz</a>
       <a href="https://youtu.be/dQw4w9WgXcQ">Secret</a>
     </footer>
   </div>
